refactor:improve after review

--- a/content/talks/dotnet-bkk/2021-10-26.md
+++ b/content/talks/dotnet-bkk/2021-10-26.md
@@ -5,7 +5,7 @@ editable: true
 showToc: true
 ---
 
-# .NET Bangkok Meetup @ 45 - Hacktoberfest edition!
+# [.NET Bangkok Meetup @ 45 - Hacktoberfest edition!](https://www.meetup.com/dotnet-bkk/events/280924478/)
 This is our #45 .NET Bangkok Meetup.
 
 This month is a special one! Hacktoberfest edition!
